[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[dependencies]
blueberry-serde = { git = "https://github.com/patrickelectric/blueberry-serde" }
clap = { version = "4", features = ["derive"] }
derive_more = { version = "2", features = ["full"] }
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
once_cell = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "time", "net"] }
tokio-serial = "5"
if-addrs = "0.13"
